apps/bgd/overlays/bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demoapp
  name: demoapp
  namespace: demoapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: demoapp
    weight: 100
